# enclaved

./: .gitignore  Dockerfile  Dockerfile-debug  README  README.md  build-docker-debug.sh  build-docker.sh  build-enclave-debug.sh  build-enclave-signed.sh  build-kernels.sh  build-vsock-proxy.sh  compose.yaml  debug-backup.sh  debug-recover.sh  debug.sh  deploy-kernels.sh  docker-install.sh  docker-ubuntu.sh  docker.json  enclave-backup.sh  enclave-disk-setup.sh  enclave-enclaved.sh  enclave-network-setup.sh  enclave-recover.sh  enclave.sh  enclaved.conf  enclaved.json  flake.nix  install.sh  kernels.patch  launch-enclave-debug.sh  launch-enclave-signed.sh  launch-parent.sh  package-lock.json  package.json  parent.sh  shutdown-enclave.sh  supervisord-ctl.sh  supervisord-parent.conf  supervisord.conf  (+2 more)
src/: announce.ts  client.ts  compose.ts  consts.ts  db.ts  docker.ts  enclaved-client.ts  enclaved.ts  index.ts  listeners.ts  nostr.ts  nsm.ts  parent-client.ts  signer.ts  types.ts  utils.ts  ws-client.ts
src/cli/: index.ts  utils.ts
src/enclave/: app-server.ts  container-server.ts  container.ts  index.ts  run.ts
src/enclaved-cli/: index.ts
src/modules/: announce.ts  aws.ts  client.ts  consts.ts  db.ts  docker.ts  enclaved-client.ts  enclaved.ts  keycrux-client.ts  listeners.ts  manifest.ts  (+9 more)
vsock-to-tun-incoming/: Cargo.toml  ip_to_vsock_raw_outgoing.rs  lib.rs  vsock_to_ip_raw_outgoing.rs  vsock_to_tun_incoming.rs
vsock_proxy/: Cargo.toml  README  ip_to_vsock_raw_incoming.rs  ip_to_vsock_raw_outgoing.rs  vsock_to_ip_raw_incoming.rs  vsock_to_ip_raw_outgoing.rs
(+1 files in other folders)
