[package]
name = "vsock_to_tun_incoming"
version = "0.1.0"
edition = "2021"

[dependencies]
tun-tap = "0.1.4"
anyhow = "1.0.80"
clap = { version = "4.5.1", features = ["derive"] }
libc = "0.2.153"
nfq = "0.2.5"
socket2 = { version = "0.5.6", features = ["all"] }
thiserror = "1.0.57"

[lib]
name = "oyster_raw_proxy"
path = "lib.rs"

[[bin]]
name = "vsock-to-tun-incoming"
path = "vsock_to_tun_incoming.rs"

[[bin]]
name = "ip-to-vsock-raw-outgoing"
path = "ip_to_vsock_raw_outgoing.rs"

[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1